--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -44,6 +44,13 @@
 				}
 			}
 		},
+			"models": {
+			"helloPanel": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/HelloPanel.json"
+			}
+		},
+
 		"contentDensities": {
 			"compact": true,
 			"cozy": true
