Commit - WEEK 2 UNIT 1  USING A REMOTE SERVICE WITH AGGREGATION BINDING

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -9,6 +9,15 @@
 		"description": "{{appDescription}}",
 		"applicationVersion": {
 			"version": "1.0.0"
+		},
+		"dataSources": {
+			"ES5": {
+				"uri": "/destinations/ES5/sap/opu/odata/IWBEP/GWSAMPLE_BASIC/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0"
+				}
+			}
 		}
 	},
 	"sap.ui": {
@@ -45,23 +54,25 @@
 				}
 			}
 		},
-			"models": {
+		"models": {
 			"helloPanel": {
 				"type": "sap.ui.model.json.JSONModel",
 				"uri": "model/HelloPanel.json"
 			},
-				"i18n": {
+			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
 					"bundleName": "opensap.myappsapui5.i18n.i18n"
 				}
 			},
 			"address": {
-		"type": "sap.ui.model.json.JSONModel",
-		"uri": "model/Address.json"
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/Address.json"
+			},
+			"": {
+				"dataSource": "ES5"
 			}
 		},
-
 		"contentDensities": {
 			"compact": true,
 			"cozy": true
